--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -1,7 +1,8 @@
 {% extends "layouts/base.html" %} {% block title %} Dashboard {% endblock %}
 
 <!-- Specific CSS goes HERE -->
-{% block stylesheets %}{% endblock stylesheets %} {% block content %}
+{% block stylesheets %}{% endblock stylesheets %}
+{% block content %}
 <div class="pcoded-content">
   <div class="pcoded-inner-content">
     <!-- [ breadcrumb ] start -->
@@ -81,19 +82,19 @@
                 <div class="row align-items-center justify-content-center">
                   <div class="col-auto"></div>
                 </div>
-                 {% if sensor_info %}
-                    <ul>
-                    {% for sensor in sensor_info %}
+{#                 {% if sensor_info %}#}
+{#                    <ul>#}
+{#                    {% for sensor in sensor_info %}#}
 {#                    <li> {{ sensor.sensor_parent }}</li>#}
 {#                    <li> {{ sensor.sensor_mac }}</li>#}
-                    <li> <a href="{% url 'graph' sensor.sensor_tag %}">{{ sensor.sensor_tag }}</a></li>
-                    {% endfor %}
-                    </ul>
-                 {%  elif not sensor_info %}
+{#                    <li> <a href="{% url 'result' sensor.sensor_tag %}">{{ sensor.sensor_tag }}</a></li>#}
+{#                    {% endfor %}#}
+{#                    </ul>#}
+{#                 {%  elif not sensor_info %}#}
                      <h1>
                         여기에 센서 리스트 배치될 예정<br />
                      </h1>
-                {% endif %}
+{#                {% endif %}#}
               </div>
             </div>
             <!-- <div class="card">
@@ -947,14 +948,13 @@
           </div>
         </div>
         [ Main Content ] end -->
-          </div>
         </div>
       </div>
     </div>
-
-    {% endblock content %}
-
-    <!-- Specific Page JS goes HERE  -->
-    {% block javascripts %}{% endblock javascripts %}
   </div>
 </div>
+
+{% endblock content %}
+
+<!-- Specific Page JS goes HERE  -->
+{% block javascripts %}{% endblock javascripts %}
