--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -45,6 +45,7 @@
     {#                    <li> {{ sensor.sensor_parent }}</li>#}
     {#                    <li> {{ sensor.sensor_mac }}</li>#}
                     <li> <a href="{% url 'show' sensor.sensor_tag %}">{{ sensor.sensor_tag }}</a></li>
+                    <li class=""><a href="{% url 'current' sensor.sensor_tag %}" class="">현황판</a></li>
                 {% endfor %}
             {% else %}
                 <li class=""><a href="/" class="">등록된 센서가 없습니다.</a></li>
