--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -13,7 +13,7 @@
     <!-- Meta -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+{#    <meta http-equiv="X-UA-Compatible" content="IE=edge" />#}
     <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-dattaable">
     
     <meta name="description" content="Datta Able Bootstrap admin template made using Bootstrap 4 and it has huge amount of ready made feature, UI components, pages which completely fulfills any dashboard needs." />
@@ -27,7 +27,13 @@
     <!-- animation css -->
     <link rel="stylesheet" href="/static/assets/plugins/animation/css/animate.min.css">
     <!-- vendor css -->
-    <link rel="stylesheet" href="/static/assets/css/style.css">
+    <link rel="stylesheet" href="/static/assets/css/style.css?var=1">
+
+    <!-- custom temperature -->
+    <link rel="stylesheet" href="/static/assets/css/temperature.css?var=1">
+
+    <!-- custom gauge -->
+    <link rel="stylesheet" href="/static/assets/css/gauge.css?var=1">
 
     <!-- Specific CSS goes HERE -->
     {% block stylesheets %}{% endblock stylesheets %}
