--- a/apps/static/assets/css/style.css
+++ b/apps/static/assets/css/style.css
@@ -13457,6 +13457,10 @@ div.code-toolbar > .toolbar span:hover {
   border-bottom: 6px solid #f44236;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 @-webkit-keyframes passing-through {
   0% {
     opacity: 0;
