--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -13,122 +13,120 @@
         <li class="nav-item pcoded-menu-caption">
           <label>Navigation</label>
         </li>
-        <li
-          data-username="dashboard Default Ecommerce CRM Analytics Crypto Project"
-          class="nav-item {% if 'index' in segment %} active {% endif %}"
-        >
-          <a href="/" class="nav-link"
-            ><span class="pcoded-micon"><i class="feather icon-home"></i></span
-            ><span class="pcoded-mtext">Dashboard</span></a>
+        <li data-username="dashboard Default Ecommerce CRM Analytics Crypto Project" class="nav-item {% if 'index' in segment %} active {% endif %}">
+          <a href="/" class="nav-link">
+              <span class="pcoded-micon">
+                  <i class="feather icon-home"></i>
+              </span>
+              <span class="pcoded-mtext">Dashboard</span>
+          </a>
         </li>
         <li class="nav-item pcoded-menu-caption">
           <label>로그인 정보 (하단에 표기)</label>
         </li>
-        {% for user in user_info %}
-            <li class="nav-item pcoded-menu-caption">
-                <h2> {{ user.username }}</h2>
-            </li>
-        {% endfor %}
-        {% for company in company_info %}
-            <li class="nav-item pcoded-menu-caption">
-                <h2> {{ company.company_name }}</h2>
-            </li>
-        {% endfor %}
-          <a href="javascript:" class="nav-link"
-            ><span class="pcoded-micon"><i class="feather icon-box"></i></span
-            ><span class="pcoded-mtext">Components</span></a
-          >
-          <ul class="pcoded-submenu">
-            <li class=""><a href="{% url 'init' %}" class="">초기화</a></li>
-            {% if sensor_info %}
-                {% for sensor in sensor_info %}
-    {#                    <li> {{ sensor.sensor_parent }}</li>#}
-    {#                    <li> {{ sensor.sensor_mac }}</li>#}
-                    <li> <a href="{% url 'show' sensor.sensor_tag %}">{{ sensor.sensor_tag }}</a></li>
-                    <li class=""><a href="{% url 'current' sensor.sensor_tag %}" class="">현황판</a></li>
-                    <li class=""><a href="{% url 'opcua' sensor.sensor_tag %}" class="">OPC-UA 테스트</a></li>
-                    <li class=""><a href="{% url 'speed' sensor.sensor_tag %}" class="">속도 테스트</a></li>
-                {% endfor %}
-            {% else %}
-                <li class=""><a href="/" class="">등록된 센서가 없습니다.</a></li>
-            {% endif %}
-            <li class=""><a href="/ui-button.html" class="">Button</a></li>
-            <li class=""><a href="/ui-badges.html" class="">Badges</a></li>
-            <li class="">
-              <a href="/ui-breadcrumb-pagination.html" class=""
-                >Breadcrumb & paggination</a
-              >
-            </li>
-            <li class=""><a href="/ui-collapse.html" class="">Collapse</a></li>
-            <li class=""><a href="/ui-tabs.html" class="">Tabs & pills</a></li>
-            <li class="">
-              <a href="/ui-typography.html" class="">Typography</a>
-            </li>
-            <li class="">
-              <a href="/ui-icons.html" class=""
-                >Feather<span class="pcoded-badge label label-danger"
-                  >NEW</span
-                ></a
-              >
-            </li>
-          </ul>
+{#        {% for user in user_info %}#}
+{#            <li class="nav-item pcoded-menu-caption">#}
+{#                <h2> {{ user.username }} 님 환영합니다. </h2>#}
+{#            </li>#}
+{#        {% endfor %}#}
+        <li class="nav-item pcoded-menu-caption">
+            <h2> {{ contents.username }} 님 환영합니다. </h2>
+        </li>
+        <li class="nav-item pcoded-menu-caption">
+            <h2></h2>
+            <a href="javascript:" class="nav-link">
+              <span class="pcoded-micon">
+                  <i class="feather icon-box"></i>
+              </span>
+              <span class="pcoded-mtext">메뉴얼</span>
+            </a>
+            <ul class="pcoded-submenu">
+{#                admin 페이지로 이동 가능#}
+                <li class=""><a href="/home/admin" class="">관리자</a></li>
+                <li class=""><a href="{% url 'init' %}" class="">초기화</a></li>
+{#                    {% if sensor_info %}#}
+{#                        {% for sensor in sensor_info %}#}
+{#                            <li> <a href="{% url 'show' sensor.sensor_tag %}">{{ sensor.sensor_tag }}</a></li>#}
+{#                            <li class=""><a href="{% url 'current' sensor.sensor_tag %}" class="">현황판</a></li>#}
+{#                            <li class=""><a href="{% url 'opcua' sensor.sensor_tag %}" class="">OPC-UA 테스트</a></li>#}
+{#                            <li class=""><a href="{% url 'speed' sensor.sensor_tag %}" class="">속도 테스트</a></li>#}
+{#                        {% endfor %}#}
+{#                    {% else %}#}
+{#                        <li class=""><a href="/" class="">등록된 센서가 없습니다.</a></li>#}
+{#                    {% endif %}#}
+                {% if contents.sensor_tags %}
+                        {% for sensor in contents.sensor_tags %}
+                            <li> <a href="{% url 'show' sensor %}">{{ sensor }}</a></li>
+                            <li class=""><a href="{% url 'current' sensor %}" class="">현황판</a></li>
+                            <li class=""><a href="{% url 'opcua' sensor %}" class="">OPC-UA 테스트</a></li>
+                            <li class=""><a href="{% url 'speed' sensor %}" class="">속도 테스트</a></li>
+                        {% endfor %}
+                    {% else %}
+                        <li class=""><a href="/" class="">등록된 센서가 없습니다.</a></li>
+                    {% endif %}
+                <li class=""><a href="/ui-button.html" class="">Button</a></li>
+                <li class=""><a href="/ui-badges.html" class="">Badges</a></li>
+                <li class="">
+                  <a href="/ui-breadcrumb-pagination.html" class="">Breadcrumb & paggination</a>
+                </li>
+                <li class=""><a href="/ui-collapse.html" class="">Collapse</a></li>
+                <li class=""><a href="/ui-tabs.html" class="">Tabs & pills</a></li>
+                <li class="">
+                  <a href="/ui-typography.html" class="">Typography</a>
+                </li>
+                <li class="">
+                  <a href="/ui-icons.html" class="">Feather<span class="pcoded-badge label label-danger">NEW</span>
+                  </a>
+                </li>
+            </ul>
         </li>
         <li class="nav-item pcoded-menu-caption">
           <label>Forms & table</label>
         </li>
-        <li
-          data-username="form elements advance componant validation masking wizard picker select"
-          class="nav-item {% if 'ui-forms' in segment %} active {% endif %}"
-        >
-          <a href="/ui-forms.html" class="nav-link"
-            ><span class="pcoded-micon"
-              ><i class="feather icon-file-text"></i></span
-            ><span class="pcoded-mtext">Form elements</span></a
-          >
+        <li data-username="form elements advance componant validation masking wizard picker select" class="nav-item {% if 'ui-forms' in segment %} active {% endif %}">
+          <a href="/ui-forms.html" class="nav-link">
+              <span class="pcoded-micon">
+                  <i class="feather icon-file-text"></i>
+              </span>
+              <span class="pcoded-mtext">Form elements</span>
+          </a>
         </li>
-        <li
-          data-username="Table bootstrap datatable footable"
-          class="nav-item {% if 'ui-tables' in segment %} active {% endif %}"
-        >
-          <a href="/ui-tables.html" class="nav-link"
-            ><span class="pcoded-micon"
-              ><i class="feather icon-server"></i></span
-            ><span class="pcoded-mtext">Table</span></a
-          >
+        <li data-username="Table bootstrap datatable footable" class="nav-item {% if 'ui-tables' in segment %} active {% endif %}">
+          <a href="/ui-tables.html" class="nav-link">
+              <span class="pcoded-micon">
+                  <i class="feather icon-server"></i></span>
+              <span class="pcoded-mtext">Table</span>
+          </a>
         </li>
         <li class="nav-item pcoded-menu-caption">
           <label>Chart & Maps</label>
         </li>
-        <li
-          data-username="Charts Morris"
-          class="nav-item {% if 'charts-morris' in segment %} active {% endif %}"
-        >
-          <a href="/charts-morris.html" class="nav-link"
-            ><span class="pcoded-micon"
-              ><i class="feather icon-pie-chart"></i></span
-            ><span class="pcoded-mtext">Chart</span></a
-          >
+        <li data-username="Charts Morris" class="nav-item {% if 'charts-morris' in segment %} active {% endif %}">
+          <a href="/charts-morris.html" class="nav-link">
+              <span class="pcoded-micon">
+                  <i class="feather icon-pie-chart"></i>
+              </span>
+              <span class="pcoded-mtext">Chart</span>
+          </a>
         </li>
-        <li
-          data-username="Maps Google"
-          class="nav-item {% if 'maps-google' in segment %} active {% endif %}"
-        >
-          <a href="/maps-google.html" class="nav-link"
-            ><span class="pcoded-micon"><i class="feather icon-map"></i></span
-            ><span class="pcoded-mtext">Maps</span></a
-          >
+        <li data-username="Maps Google" class="nav-item {% if 'maps-google' in segment %} active {% endif %}">
+          <a href="/maps-google.html" class="nav-link">
+              <span class="pcoded-micon">
+                  <i class="feather icon-map"></i>
+              </span>
+              <span class="pcoded-mtext">Maps</span>
+          </a>
         </li>
         <li class="nav-item pcoded-menu-caption">
           <label>Pages</label>
         </li>
-        <li
-          data-username="Authentication Sign up Sign in reset password Change password Personal information profile settings map form subscribe"
-          class="nav-item pcoded-hasmenu"
-        >
-          <a href="javascript:" class="nav-link"
-            ><span class="pcoded-micon"><i class="feather icon-lock"></i></span
-            ><span class="pcoded-mtext">Authentication</span></a
-          >
+        <li data-username="Authentication Sign up Sign in reset password Change password Personal information profile settings map form subscribe" class="nav-item pcoded-hasmenu">
+          <a href="javascript:" class="nav-link">
+              <span class="pcoded-micon">
+                  <i class="feather icon-lock"></i>
+              </span>
+              <span class="pcoded-mtext">Authentication</span>
+          </a>
           <ul class="pcoded-submenu">
             <li class="">
               <a href="/auth-reset-pass.html" class="">Reset Pass</a>
